--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %> 
 
  <div class="container" style="margin-top: 30px">
-     <header class="jumbotron">
+     <header class="jumbotron" style="background-color:#f5f1ed;color:#333; border: 3px solid #252323">
          <div class="container">
              <h1><span class="glyphicon glyphicon-tent" aria-hidden="true"></span>   Welcome To Crazy Campers!</h1>
              <p>View our hand-picked campgrounds from all over the world</p>
