--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,21 +1,101 @@
- <% include ./partials/header %>
-<div class="container" style="margin-top: 10px">
-    <div class="row">
-        <h1 style="text-align: center" >Sign Up!</h1>
-        <div style="width: 30%; margin: 25px auto;">
-           <form action="/register" method="POST">
-                <div class="form-group">
-                    <input class="form-control"  type="text" name="username" placeholder="username">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+		<meta charset="UTF-8">
+	<title>	Bootstrap Registration Form</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<link href="/stylesheets/register.css" type="text/css" rel="stylesheet">
+<!-- Latest compiled and minified JavaScript and jquery-->
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+	 <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        <a class="navbar-brand" href="/">Crazy Campers</a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="bs-nav-demo">
+                        <ul class="nav navbar-nav navbar-right">
+                            <% if(!currentUser){ %>
+                                <li><a href="/login">Login</a></li>
+                                <li><a href="/register">Sign Up</a></li>
+                            <% } else { %>
+                                <li><a href="#">Signed In As <%= currentUser.username %></a></li>
+                                <li><a href="/logout">Logout</a></li>
+                            <% } %>
+                        </ul>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <input class="form-control"  type="password" name="password" placeholder="password">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block">submit!</button>
-                </div>
-            </form>
-            <a href="/campgrounds">Go Back</a>
-        </div>
-    </div>
+         </nav>
+    <!---Flash message---->
+         
+    <div class="container" style="margin-top: 10vh">
+       <% if(error && error.length>0){ %>
+            <div class="alert alert-danger" role="alert">
+                <%= error %>
+            </div>
+            
+        <% } %>
+        
+        <% if(success && success.length>0) {%>
+             <div class="alert alert-success" role="alert">
+                <%= success %>
+            </div>
+            
+        <% } %>
+   </div>    
+         
+         
+         
+	  <div class="container-fluid bg">
+			<div class="row">
+				<div class="col-md-4 col-sm-4 col-xs-12"></div>
+				<!-- form starts-->
+				<div class="col-md-4 col-sm-4 col-xs-12">
+					
+				<form class="form-container" action="/register" method="POST">
+					  <h1 class="loginheader col-xs-12">Sign Up!</h1>
+					     <div class="form-group">
+                            <input class="form-control"  type="text" name="username" placeholder="username" class="col-md-3 col-md-6">
+                        </div>
+					  
+					   	<div class="form-group">
+                            <input class="form-control"  type="password" name="password" placeholder="password" class="col-md-3 col-md-6">
+                        </div>
+
+                        <div class="form-group">
+                            <button class="btn btn-lg btn-success btn-block col-md-3">submit!</button>
+                        </div>
+                       <div class="form-group goback">
+                         	<a href="#">Go Back</a>
+                         </div> 
+				</form>
+					 
+
+				</div>
+				<!-- form ends -->
+
+			<div class="col-md-4 col-sm-4 col-xs-12"></div>
+			
+	</div>
 </div>
-<% include ./partials/footer %>
+
+    
+    
+</body>
+</html>
